# logene-voice-input

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO-refactor.md  TODO.md  electron.vite.config.ts  index.html  package-lock.json  package.json  test-asr.mjs  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  打包说明.md
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: index.html  wav.ts.html
electron/: sqljs.d.ts
electron/main/: app-context.ts  asr-text.ts  asr.ts  config.ts  db.ts  focus-controller.ts  focus.ts  hotkeys.ts  index.ts  input-sim.ts  ipc.ts  llm-service.ts  local-asr.ts  logger.ts  model-manager.ts  paste-plan.ts  permissions.ts  rewrite-window.ts  self-app.ts  voice-commands.ts  win32-focus.ts
electron/preload/: index.ts
public/worklets/: pcm-capture-processor.js
python/: asr_server.py  build_sidecar.py  inference.py  model_cache.py  model_factory.py  protocol.py  requirements-lock.txt  requirements.txt
src/: audio.ts  dashboard-config.ts  dashboard-models.ts  main.ts  styles.css  types.ts  ui-state.ts  utils.ts  wav.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  audio.rs  commands.rs  config.rs  input_sim.rs  lib.rs  main.rs  tray.rs  vad.rs  voice_commands.rs
src/styles/: base.css  dashboard.css  float.css  rewrite.css
src/views/: dashboard.ts  float.ts  onboarding.ts  rewrite.ts
test/main/: asr-text.test.ts  asr.test.ts  db.test.ts  focus-controller.test.ts  llm-service.test.ts  local-asr.test.ts  model-manager.test.ts  (+4 more)
(+3 files in other folders)
